feat: Integrate FMI library with its source, build system, tests, and third-party dependencies, and update CI configuration.

--- a/src/demo/chrono/demo_config.json
+++ b/src/demo/chrono/demo_config.json
@@ -9,7 +9,8 @@
         "unpack_dir": "./tmp_unpack/vehicle",
         "parameters": {
             "data_path": "../../../../../thirdparty/chrono/data/vehicle/",
-            "vehicle_JSON": "../../../../../thirdparty/chrono/data/vehicle/hmmwv/vehicle/HMMWV_Vehicle.json"
+            "vehicle_JSON": "../../../../../thirdparty/chrono/data/vehicle/hmmwv/vehicle/HMMWV_Vehicle.json",
+            "init_speed": 0.0
         }
     },
     "powertrain": {
