fix: esmini bug&DriveController bug

--- a/src/demo/esmini_drive_chrono/CMakeLists.txt
+++ b/src/demo/esmini_drive_chrono/CMakeLists.txt
@@ -14,7 +14,12 @@ set(SOURCES
 add_executable(esmini_drive_chrono_demo ${SOURCES})
 
 # FMILib configuration
-set(FMILIB_ROOT "${CMAKE_SOURCE_DIR}/thirdparty/fmi-library")
+# Resolve Repo Root
+get_filename_component(REPO_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../../.." ABSOLUTE)
+message(STATUS "Repo Root: ${REPO_ROOT}")
+
+# FMILIB configuration
+set(FMILIB_ROOT "${REPO_ROOT}/thirdparty/fmi-library")
 set(FMILIB_INCLUDE_DIR 
     "${FMILIB_ROOT}/build/fmilib_include"
     "${FMILIB_ROOT}/build/fmilib_config_include"
@@ -37,22 +42,22 @@ if(MSVC)
     target_compile_options(esmini_drive_chrono_demo PRIVATE /utf-8 /bigobj)
 endif()
 
-# Protobuf (via vcpkg)  ※Changed to Protobuf (capitalized) to ensure protobuf_generate_cpp is available via wrapper/module
+# Protobuf (via vcpkg)
 find_package(Protobuf REQUIRED)
 
 # Undefine VERSION_MAJOR to avoid conflicts with OSI
 add_definitions(-UVERSION_MAJOR)
 
 # Use pre-generated OSI files
-set(OSI_GEN_DIR "${CMAKE_SOURCE_DIR}/generated/osi3")
+set(OSI_GEN_DIR "${REPO_ROOT}/generated/osi3")
 file(GLOB OSI_SRCS "${OSI_GEN_DIR}/*.pb.cc")
 file(GLOB OSI_HDRS "${OSI_GEN_DIR}/*.pb.h")
 
 target_sources(esmini_drive_chrono_demo PRIVATE ${OSI_SRCS} ${OSI_HDRS})
 
 target_include_directories(esmini_drive_chrono_demo PRIVATE 
-    "${CMAKE_SOURCE_DIR}/generated"
-    "${CMAKE_SOURCE_DIR}/generated/osi3"
+    "${REPO_ROOT}/generated"
+    "${REPO_ROOT}/generated/osi3"
     ${FMILIB_INCLUDE_DIR}
 )
 
